# screamrouter

./: .gitignore  .gitmodules  HeatFilter.xsl  MANIFEST.in  README.md  RTCP_IMPLEMENTATION_PLAN.md  STUN_OPTIONAL_IMPLEMENTATION_GUIDE.md  STUN_OPTIONAL_MIGRATION_STRATEGY.md  STUN_OPTIONAL_TECHNICAL_SPEC.md  TODO.md  ZeroconfService.cs  __main__.spec  api.py  api_controller.py  api_webstream.py  audio_engine_unused_variables.md  build_ortp.sh  capture_api_state.py  config.yaml  config_example.yaml  constants.py  controller.py  controller_types.py  decoder_test  head_log  image_tagger.py  index.html  index.html?platform=linux  install_service.sh  kill_restart.sh  logger.py  mixer.py  package-lock.json  package.json  piplog  pyproject.toml  readme.md  rebuild.sh  requirements.txt  rtp.pcap  (+16 more)
Readme/: api.md  (+19 more)
src/audio_engine/: CMakeLists.txt  audio_channel_layout.cpp  audio_channel_layout.h  audio_component.h  audio_constants.h  audio_manager.cpp  audio_manager.h  audio_processor.cpp  audio_processor.h  audio_types.h  bindings.cpp  cpp_logger.cpp  cpp_logger.h  layout_mixer.cpp  network_audio_receiver.cpp  network_audio_receiver.h  per_process_scream_receiver.cpp  per_process_scream_receiver.h  protocol_types.h  raw_scream_receiver.cpp  raw_scream_receiver.h  rtp_receiver.cpp  rtp_receiver.h  sink_audio_mixer.cpp  sink_audio_mixer.h  source_input_processor.cpp  source_input_processor.h  thread_safe_queue.h  timeshift_manager.cpp  timeshift_manager.h
src/audio_engine/audio_processor/: audio_processor.cpp  audio_processor.h
src/audio_engine/audio_processor/biquad/: biquad.cpp  biquad.h
src/audio_engine/biquad/: biquad.cpp  biquad.h
src/audio_engine/configuration/: audio_engine_config_applier.cpp  audio_engine_config_applier.h  audio_engine_config_types.h  audio_engine_settings.h
src/audio_engine/input_processor/: processor_registry.cpp  processor_registry.h  source_input_processor.cpp  source_input_processor.h  stream_clock.cpp  stream_clock.h  timeshift_manager.cpp  timeshift_manager.h
src/audio_engine/managers/: audio_manager.cpp  audio_manager.h  connection_manager.cpp  connection_manager.h  control_api_manager.cpp  control_api_manager.h  mp3_data_api_manager.cpp  mp3_data_api_manager.h  receiver_manager.cpp  receiver_manager.h  sink_manager.cpp  sink_manager.h  source_manager.cpp  source_manager.h  stats_manager.cpp  stats_manager.h  webrtc_manager.cpp  webrtc_manager.h
src/audio_engine/output_mixer/: listener_dispatcher.cpp  listener_dispatcher.h  mix_scheduler.cpp  mix_scheduler.h  mp3_encoder.cpp  mp3_encoder.h  sink_audio_mixer.cpp  sink_audio_mixer.h  sink_rate_controller.cpp  sink_rate_controller.h
src/audio_engine/receivers/: clock_manager.cpp  clock_manager.h  network_audio_receiver.cpp  network_audio_receiver.h
src/audio_engine/receivers/pulse/: pulse_message.cpp  pulse_message.h  pulse_protocol.h  pulse_receiver.cpp  pulse_receiver.h  pulse_tagstruct.cpp  pulse_tagstruct.h
src/audio_engine/receivers/rtp/: audio_format_probe.cpp  audio_format_probe.h  rtp_opus_receiver.cpp  rtp_opus_receiver.h  rtp_payload_defaults.h  rtp_pcm_receiver.cpp  rtp_pcm_receiver.h  rtp_pcma_receiver.cpp  rtp_pcma_receiver.h  rtp_pcmu_receiver.cpp  rtp_pcmu_receiver.h  rtp_receiver.cpp  rtp_receiver.h  rtp_receiver_base.cpp  rtp_receiver_base.h  rtp_receiver_utils.cpp  rtp_receiver_utils.h  rtp_reordering_buffer.cpp  rtp_reordering_buffer.h  sap_listener.cpp  sap_listener.h
src/audio_engine/receivers/scream/: per_process_scream_receiver.cpp  per_process_scream_receiver.h  raw_scream_receiver.cpp  raw_scream_receiver.h
src/audio_engine/receivers/system/: alsa_capture_receiver.cpp  alsa_capture_receiver.h  screamrouter_fifo_receiver.cpp  screamrouter_fifo_receiver.h  wasapi_capture_receiver.cpp  wasapi_capture_receiver.h
src/audio_engine/senders/: i_network_sender.h
src/audio_engine/senders/rtp/: multi_device_rtp_opus_sender.cpp  multi_device_rtp_opus_sender.h  multi_device_rtp_sender.cpp  multi_device_rtp_sender.h  rtcp_controller.cpp  rtcp_controller.h  rtp_constants.h  rtp_opus_sender.cpp  rtp_opus_sender.h  rtp_sender.cpp  rtp_sender.h  rtp_sender_core.cpp  rtp_sender_core.h  rtp_sender_registry.cpp  rtp_sender_registry.h
src/audio_engine/senders/scream/: scream_sender.cpp  scream_sender.h
src/audio_engine/synchronization/: global_synchronization_clock.cpp  global_synchronization_clock.h  sink_synchronization_coordinator.cpp  sink_synchronization_coordinator.h
src/audio_engine/system_audio/: alsa_device_enumerator.cpp  alsa_device_enumerator.h  runtime_device_advertiser.cpp  runtime_device_advertiser.h  runtime_paths.h  system_audio_tags.h  system_device_enumerator.h  wasapi_device_enumerator.cpp  wasapi_device_enumerator.h  windows_utils.h
src/audio_engine/timing/: reference_clock_manager.cpp  reference_clock_manager.h  timestamp_mapper.cpp  timestamp_mapper.h
src/audio_engine/utils/: audio_component.h  byte_ring_buffer.h  cpp_logger.cpp  cpp_logger.h  custom_threading_alt.h  fntrace.cpp  fntrace.h  fntrace_probe.cpp  fntrace_probe.h  lock_guard_profiler.cpp  lock_guard_profiler.h  lock_order_enforcer.h  packet_ring.h  profiler.cpp  profiler.h  sentinel_logging.h  thread_priority.cpp  thread_priority.h  thread_safe_queue.h
tests/: CMakeLists.txt  test_thread_safe_queue_peek.cpp  test_unified_jitter_buffer.cpp  timeshift_stop_cont_sim.cpp
tests/configuration/: test_configuration_manager.py
tests/integration/: test_audio_graph.cpp  test_config_applier.cpp  test_pipeline.cpp  test_receiver_stress.cpp  test_source_processor_integration.cpp
tests/mocks/: mock_network.h
tests/python/: test_audio_engine_config_applier.py  test_configuration_manager_reload_condition.py
tests/stubs/pybind11/: pybind11.h
tests/unit/: test_audio_channel_layout.cpp  test_audio_format_probe.cpp  test_audio_mixing.cpp  test_audio_processor.cpp  test_biquad.cpp  test_byte_ring_buffer.cpp  test_global_sync_clock.cpp  test_packet_ring.cpp  test_rtp_interpolation.cpp  test_rtp_reordering_buffer.cpp  test_sink_rate_controller.cpp  test_stream_clock.cpp  test_thread_safe_queue.cpp
(+659 files in other folders)
